--- a/assets/scss/components/_sortable-table.scss
+++ b/assets/scss/components/_sortable-table.scss
@@ -1,3 +1,7 @@
+[aria-sort] a {
+  display: inline-block;
+}
+
 [aria-sort] a,
 [aria-sort] a:hover {
   background-color: rgba(0, 0, 0, 0);
@@ -16,6 +20,18 @@
   font-size: 1em;
   margin: 0;
   text-decoration: none;
+}
+
+[aria-sort] a:focus {
+  outline: 3px solid rgba(0, 0, 0, 0);
+  color: #0b0c0c;
+  background-color: #fd0;
+  box-shadow:
+    0 -2px #fd0,
+    0 4px #0b0c0c;
+  text-decoration: none;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
 }
 
 [aria-sort] a:before {
